--- a/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
+++ b/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
@@ -46,7 +46,7 @@
 
         <!--Start of Home Page-->
 
-        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
+        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -82,14 +82,15 @@
 
                     </toolkit:ListPicker>
 
-                    <TextBlock x:Name="Balance"
+                    <TextBlock x:Name="BalanceBlock"
                                Grid.Row="1"
                                FontSize="35"
                                Text="1.42 ฿"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Top"
                                Margin="0,10,0,10"/>
-                    <Image Source=""
+                    <Image x:Name="QRImage"
+                           Source=""
                            Grid.Row="2"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center" 
@@ -97,12 +98,11 @@
                            Height="200"
                            Margin="0,10,0,10"
                            />
-                    <TextBlock Name="TransactionTitle"
-                               Grid.Row="3"
+                    <TextBlock Grid.Row="3"
                                FontSize="28"
                                Text="Recent Transactions:"
                                Margin="12,10,12,0"/>
-                    <TextBlock Name="Transactions"
+                    <TextBlock x:Name="TransactionBlock"
                                Grid.Row="4"
                                Text="Stuff goes here"
                                FontSize="24"
@@ -120,7 +120,7 @@
 
 
         <!--Start of settings Page-->
-        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
+        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
