--- a/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
+++ b/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
@@ -45,7 +45,7 @@
 
         <!--Start of Home Page-->
 
-        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
+        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -109,10 +109,22 @@
                                FontSize="24"
                                Margin="12,10,12,10"/>
 
+                    <ProgressBar HorizontalAlignment="Stretch"
+                                 Name="HomeLoadingBar"
+                                 Margin="0,0,0,0"
+                                 Grid.Row="2"
+                                 VerticalAlignment="Bottom"
+                                 Height="10"
+                                 Visibility="Collapsed"
+                                 IsIndeterminate="true"
+                                 Foreground="White"
+                                 Background="Black"/>
+
                 </Grid>
 
 
             </Grid>
+            
 
 
 
@@ -121,7 +133,7 @@
 
 
         <!--Start of settings Page-->
-        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
+        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
