--- a/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
+++ b/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
@@ -45,7 +45,7 @@
 
         <!--Start of Home Page-->
 
-        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
+        <Grid x:Name="HomeLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -71,7 +71,7 @@
                     </Grid.RowDefinitions>
 
                     <toolkit:ListPicker x:Name="CurrencyPickerHome"
-                                    
+                                    SelectionChanged="CurrencyPickerHome_SelectionChanged"
                                     Grid.Row="0"
                                     >
                         <toolkit:ListPickerItem x:Name="one" Content="Bitcoin"/>
@@ -134,7 +134,7 @@
 
 
         <!--Start of settings Page-->
-        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
+        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
