--- a/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
+++ b/MultiWallet v2/MultiWallet/MultiWallet/MainPage.xaml
@@ -85,7 +85,7 @@
                     <TextBlock x:Name="BalanceBlock"
                                Grid.Row="1"
                                FontSize="35"
-                               Text="1.42 ฿"
+                               Text="฿"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Top"
                                Margin="0,10,0,10"
@@ -134,7 +134,7 @@
 
 
         <!--Start of settings Page-->
-        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Visible">
+        <Grid x:Name="SettingsLoaded" Background="Black" Grid.RowSpan="2" Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
